# datetime-fortran

./: CMakeLists.txt
src/lib/: strptime.c
